--- a/app/src/main/res/layout/activity_others_profile.xml
+++ b/app/src/main/res/layout/activity_others_profile.xml
@@ -79,6 +79,7 @@
             android:textColor="@color/colorPrimaryDark" />
 
         <Button
+            android:id="@+id/init_chat"
             android:layout_width="90dp"
             android:layout_height="40dp"
             android:layout_below="@id/user_header_user_state_info"
