--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -8,6 +8,16 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowAnimationStyle">@style/Animation</item>
     </style>
+
+    <style name="title_text">
+        <item name="android:textSize">32sp</item>
+        <item name="android:textColor">#00818A</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+
+
+
 
     <style name="Animation">
         <item name="android:activityOpenEnterAnimation">@null</item>
