--- a/app/src/main/res/layout/activity_allchats.xml
+++ b/app/src/main/res/layout/activity_allchats.xml
@@ -16,9 +16,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/logo"
-            android:layout_centerHorizontal="true"
+            android:layout_alignParentStart="true"
             android:layout_marginTop="10dp"
-            android:text="@string/notifications"
+            android:text="@string/allchats"
+            android:layout_marginStart="20dp"
             android:textAlignment="center"
             android:textColor="@color/colorPrimaryLight"
             android:textSize="25sp" />
@@ -39,7 +40,7 @@
         android:layout_height="wrap_content">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/notificationRecyclerView"
+            android:id="@+id/allchatsRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
