--- a/app/src/main/res/layout/chat_right.xml
+++ b/app/src/main/res/layout/chat_right.xml
@@ -10,9 +10,9 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginRight="15dp"
-        app:srcCompat="@drawable/ic_person"
+        android:visibility="gone"
 
-        android:visibility="gone" />
+        app:srcCompat="@drawable/ic_person" />
 
     <TextView
         android:id="@+id/messageTv"
@@ -33,9 +33,18 @@
         android:layout_below="@+id/messageTv"
         android:layout_alignParentRight="true"
         android:gravity="end"
-        android:text="delivered"
         android:textAlignment="textEnd"
         android:textColor="@color/grey" />
+
+    <TextView
+        android:id="@+id/timeTv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/messageTv"
+        android:layout_centerInParent="true"
+        android:layout_margin="15dp"
+        android:text="02/22/2020 02:15PM"
+        android:textColor="@color/white" />
 
 
 </RelativeLayout>
