--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -25,7 +25,7 @@
         android:title="@null" />
 
     <item
-        android:id="@+id/nav_notification"
+        android:id="@+id/nav_AllChats"
         android:icon="@drawable/ic_chat"
         android:title="@null" />
 
