--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -30,7 +30,8 @@
 
     <ScrollView android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/search_box">
+        android:layout_below="@id/search_box"
+        android:layout_above="@id/bottom_nav">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
