--- a/app/src/main/res/layout/list_trips.xml
+++ b/app/src/main/res/layout/list_trips.xml
@@ -3,16 +3,23 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <View
+        android:layout_marginTop="25dp"
+        android:layout_width="350dp"
+        android:layout_centerHorizontal="true"
+        android:layout_height="0.1dp"
+        android:paddingBottom="25dp"
+        android:background="@android:color/darker_gray"  />
+
     <TextView
         android:id="@+id/search_trip_city"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="15dp"
-        android:paddingLeft="10dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="5dp"
+        android:textAlignment="center"
         android:textColor="@color/colorPrimary"
-        android:textSize="13sp" />
+        android:textSize="16sp" />
 
     <ImageView
         android:id="@+id/search_trip_image"
@@ -20,7 +27,8 @@
         android:layout_height="300dp"
         android:layout_below="@+id/search_trip_city"
         android:layout_alignParentLeft="true"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"/>
 
 
 </RelativeLayout>
